# quickjs-cmake

./: CMakeLists.txt  getopt.h
cmake-build/: .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  QuickJS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cmake_install.cmake  compile_commands.json  qjs.vcxproj  qjs.vcxproj.filters  qjsc.vcxproj  qjsc.vcxproj.filters
cmake-build/.cmake/api/v1/reply/: cache-v2-dbaf898c2f828cdddab2.json  cmakeFiles-v1-bbac74a2c9f0cbf3e03e.json  codemodel-v2-3998700ed430c2e8257f.json  index-2022-12-02T11-58-18-0533.json  target-ALL_BUILD-MinSizeRel-c6c167ef33027d976e77.json  target-ZERO_CHECK-MinSizeRel-9fd551bc5385b71b4d75.json  target-qjs-Debug-3749d8f8cfd211183798.json  target-qjs-MinSizeRel-a93fdea3aa58d89216ef.json  target-qjs-RelWithDebInfo-41edc672bae72cc9b671.json  target-qjs-Release-890abf1cfc01c07d0bdf.json  target-qjsc-Debug-9b3d892bf8dea673cd4b.json  target-qjsc-MinSizeRel-aa3d536f6e3629cf9391.json  target-qjsc-RelWithDebInfo-b689b0a5ba569ec80545.json  target-qjsc-Release-11b2576301046d2a5dd6.json  toolchains-v1-17667121b338dd61f365.json
cmake-build/qjsc.dir/Debug/qjsc.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  qjsc.lastbuildstate
cmake-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
